--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "toc": "doctoc README.md --github"
   },
   "devDependencies": {
-    "doctoc": "^1.3.1"
+    "doctoc": "^1.3.1",
+    "husky": "^1.0.0-rc.13"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn toc"
+    }
   }
 }
